--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=kafka
+
+server.port=8081
+spring.kafka.bootstrap-servers=127.0.0.1:19092
+spring.kafka.template.default-topic=test-topic
+spring.kafka.consumer.group-id=testGroup-1
